button alignment fixed, settings page created

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,11 +5,21 @@ page-home {
   #map_canvas {
     height: 100%;
   }
-  .toolbar {
-    max-height: 10%;
-  }
+  
   .tlb-button {
-    max-height: 60px;
+    max-height: 100%;
     margin: 5%;
+  }
+  .profile_button {
+    max-height : 15%
+  }
+  .settings_button {
+    max-height : 15%;
+    float : right;
+  }
+  .button_grid {
+    position: absolute;
+    bottom: 0;
+    max-height : 20%;
   }
 }
